--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=5000
 #logging.level.root = debug
-spring.datasource.url=jdbc:postgresql://localhost:5432/test_database?stringtype=unspecified
-pring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb?stringtype=unspecified
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=java_user
 spring.datasource.password=qwerty
 spring.aop.proxy-target-class=true
 server.jetty.acceptors=8
