--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=5000
 #logging.level.root = debug
 spring.datasource.url=jdbc:postgresql://localhost:5432/testdb?stringtype=unspecified
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=java_user
-spring.datasource.password=qwerty
+spring.datasource.username=lieroz
+spring.datasource.password=b769sz7u
 spring.aop.proxy-target-class=true
 server.jetty.acceptors=8
