--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=5000
 #logging.level.root = debug
-spring.datasource.url=jdbc:postgresql://localhost:5432/template0?stringtype=unspecified
+spring.datasource.url=jdbc:postgresql://localhost:5432/docker?stringtype=unspecified
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=docker
 spring.datasource.password=docker
